@@ -1,6 +1,10 @@
 === xdg-utils 1.x.x ====
 
 2009-07-28 Fathi Boudra <fabo@freedesktop.org>
+    * Fix hardcoded path in make_default_kde() in xdg-mime unde KDE 3.
+      Add initial KDE 4 support to the function.
+
+2009-07-28 Fathi Boudra <fabo@freedesktop.org>
     * Use kbuildsycoca4 under KDE 4 and kbuildsycoca under KDE 3.
 
 2009-07-28 Fathi Boudra <fabo@freedesktop.org>
